# CMake-Pratice

./: CMakeLists.txt  README.md  main.cpp
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.cpp
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  hello.lib  main.c
